--- a/Grafica/CMakeLists.txt
+++ b/Grafica/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿set(FLTK_DIR C:/fltk-1.3.5/build)
 find_package(FLTK REQUIRED NO_MODULE)
 
-add_executable(GUIMetro CMakeProject1.cpp)
+add_executable(GUIMetro Grafica.cpp)
 
 target_include_directories(GUIMetro PUBLIC ${FLTK_INCLUDE_DIRS})
 
