finestra grafica funzionante

--- a/Grafica/CMakeLists.txt
+++ b/Grafica/CMakeLists.txt
@@ -1,5 +1,6 @@
 ﻿find_package(OpenGL REQUIRED)
 
-add_executable(GUIMetro Grafica.cpp)
+include_directories(${PROJECT_SOURCE_DIR}/Grafica/include)
+add_executable(GUIMetro Grafica.cpp src/glad.c)
 
 target_link_libraries(GUIMetro glfw OpenGL::GL)
