--- a/Grafica/shaders/CMakeLists.txt
+++ b/Grafica/shaders/CMakeLists.txt
@@ -1,9 +1,9 @@
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/vertex
-        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shaders)
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/fragment
-        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shaders)
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/vertex
-        ${CMAKE_CURRENT_BINARY_DIR}/shaders COPYONLY)
+        ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/fragment
-        ${CMAKE_CURRENT_BINARY_DIR}/shaders COPYONLY)
+        ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
