--- a/Grafica/CMakeLists.txt
+++ b/Grafica/CMakeLists.txt
@@ -3,6 +3,6 @@
 find_package(OpenGL REQUIRED)
 
 include_directories(${PROJECT_SOURCE_DIR}/Grafica/include)
-add_executable(GUIMetro Grafica.cpp src/glad.c src/shader.cpp src/datiInput.cpp)
+add_executable(GUIMetro Grafica.cpp src/glad.c src/shader.cpp src/datiInput.cpp src/manager.cpp)
 
 target_link_libraries(GUIMetro glfw OpenGL::GL)
