--- a/Grafica/CMakeLists.txt
+++ b/Grafica/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 find_package(OpenGL REQUIRED)
 
-include_directories(${PROJECT_SOURCE_DIR}/Grafica/include)
-add_executable(GUIMetro Grafica.cpp src/glad.c src/shader.cpp src/datiInput.cpp src/manager.cpp)
+add_executable(GUIMetro Grafica.cpp src/glad.c src/shader.cpp src/datiInput.cpp src/manager.cpp src/texture.cpp)
+target_include_directories(GUIMetro PUBLIC ${PROJECT_SOURCE_DIR}/Grafica/include)
 
-target_link_libraries(GUIMetro glfw OpenGL::GL)
+target_link_libraries(GUIMetro  PUBLIC glfw OpenGL::GL)
